@@ -10,6 +10,8 @@ Funciones:
     ubicación geográfica determinada en coordenadas geográficas (Lat/Long). Puede generar un archivo
     resultante o llamar a un Web Service.
 Cambios
+    -- 20/05/2017
+        * Cambios importantes para el funcionamiento. Removidos los filtros para las correlaciones y otros.
     -- 16/05/2017
         * Agregado soporte para procesar todos los archivos con extensión *mvol* y luego borrarlos.
         * Modificado tamaño mínimo de archivos que pueden ser procesados.
